--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "node-foursquare-2":    "0.1.5",
         "consolidate":          "0.4.0",
         "dustjs-linkedin":      "1.1.0",
-        "watch":                "0.5.1"
+        "watch":                "0.5.1",
+        "require-dir":          "0.1.0",
+        "async":                "0.1.22"
     }
 }
